--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
   "engines": {
     "atom": ">0.122.0"
   },
+  "activationEvents": ["editor:display-updated"],
   "main": "./lib/file-icon-supplement"
 }
