--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "activationEvents": ["editor:display-updated"],
   "main": "./lib/file-icon-supplement",
-  "dependencies": {
+  "devDependencies": {
     "wrench": "^1.5",
     "fs-plus": "^2.3",
     "temp": "^0.7"
