--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "file-icon-supplement",
   "version": "0.5.0",
-  "description": "Additional file extension icons for all themes including full color icons",
+  "description": "Additional file extension icons for all themes",
   "repository": "https://github.com/sscotth/file-icon-supplement",
   "license": "MIT",
   "engines": {
-    "atom": ">0.122.0"
+    "atom": ">=0.130.0"
   },
   "activationEvents": ["editor:display-updated"],
   "main": "./lib/file-icon-supplement",
