change atom engine version to * in package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/sscotth/file-icon-supplement",
   "license": "MIT",
   "engines": {
-    "atom": ">=0.130.0"
+    "atom": "*"
   },
   "activationEvents": [
     "editor:display-updated"
