--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "temp": "^0.7"
   },
   "dependencies": {
-    "atom-space-pen-views": "^2.0.4",
-    "event-kit": "^1.1.0"
+    "atom-space-pen-views": "^2.0.4"
   }
 }
