--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "temp": "^0.7"
   },
   "dependencies": {
-    "atom-space-pen-views": "^2.0.4"
+    "atom-space-pen-views": "^2.0.4",
+    "underscore-plus": "^1.6.6"
   }
 }
