--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
   "dependencies": {
     "atom-space-pen-views": "^2.0.4",
     "underscore-plus": "^1.6.6"
-  }
+  },
+  "styleSheets": ["main"]
 }
